# mc-launcher

./: Cargo.toml
.github/workflows/: rust.yml
crates/mc-launcher/: Cargo.toml
crates/mc-launcher-core/: Cargo.toml
crates/mc-launcher-core/src/: launch.rs  lib.rs  options.rs
crates/mc-launcher-core/src/modloader/: fabric.rs  forge.rs  mod.rs  quilt.rs  vanilla.rs
crates/mc-launcher-core/src/runtime/: mod.rs
crates/mc-launcher-core/src/version/: mod.rs
crates/mc-launcher/src/: main.rs
